--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^15.16.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@tanstack/react-query": "^4.35.3",
@@ -18,6 +20,7 @@
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7"
   }
 }
